gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: server-inventory-route
  namespace: server-inventory
spec:
  parentRefs:
    - name: server-inventory-gateway

  rules:
    - backendRefs:
        - name: server-inventory-api
          port: 8000
